--- a/UniVerse/app/src/main/res/layout/activity_feed.xml
+++ b/UniVerse/app/src/main/res/layout/activity_feed.xml
@@ -14,8 +14,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-
+        app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
         app:defaultNavHost="true"
         app:navGraph="@navigation/nav_graph" />
 
@@ -23,7 +22,7 @@
         android:id = "@+id/bottomNavigationView"
         style="@style/Widget.MaterialComponents.BottomNavigationView.Colored"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="60dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:menu="@menu/bottom_navigation_menu"
         android:background="@color/colorPrimary"/>
