--- a/UniVerse/app/src/main/res/layout/create_event.xml
+++ b/UniVerse/app/src/main/res/layout/create_event.xml
@@ -9,10 +9,10 @@
 
     <ImageView
         android:id="@+id/ic_back"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:scaleType="center"
         android:src="@drawable/ic_baseline_arrow_back_24"
-        app:layout_constraintRight_toLeftOf="@id/createEvent_title"
         app:layout_constraintTop_toTopOf="@id/createEvent_title"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="@id/createEvent_title"
@@ -29,8 +29,7 @@
         android:textColor="@color/black"
         android:fontFamily="@font/gilroy_bold"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="@id/ic_back"/>
+        app:layout_constraintLeft_toRightOf="@id/ic_back"/>
 
     <!-- Event Name -->
     <TextView
