--- a/UniVerse/app/src/main/res/layout/create_event.xml
+++ b/UniVerse/app/src/main/res/layout/create_event.xml
@@ -16,13 +16,13 @@
         app:layout_constraintTop_toTopOf="@id/createEvent_title"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="@id/createEvent_title"
-        android:layout_marginHorizontal="30dp"/>
+        android:layout_marginHorizontal="20dp"/>
 
     <TextView
         android:id="@+id/createEvent_title"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
-        android:text="Create an Event"
+        android:text="Create Event"
         android:layout_margin="20dp"
         android:textSize="40sp"
         android:textStyle="bold"
@@ -229,7 +229,7 @@
         />
 
     <com.google.android.material.imageview.ShapeableImageView
-        android:id="@+id/eventPhotoPickerButton"
+        android:id="@+id/eventPhotoContainer"
         android:layout_width="140dp"
         android:layout_height="140dp"
         android:layout_marginTop="10dp"
@@ -240,14 +240,18 @@
         app:layout_constraintTop_toBottomOf="@id/event_photo_label"
         app:layout_constraintLeft_toLeftOf="@id/event_photo_label" />
 
-    <com.google.android.material.imageview.ShapeableImageView
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/selectEventPic"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:background="@android:color/transparent"
-        app:layout_constraintBottom_toBottomOf="@id/eventPhotoPickerButton"
-        app:layout_constraintRight_toRightOf="@id/eventPhotoPickerButton"
-        app:srcCompat="@drawable/camera_plus_circle" />
+        android:backgroundTint="@color/colorPrimary"
+        android:foreground="@drawable/ic_baseline_add_a_photo_24"
+        android:foregroundTint="@android:color/white"
+        android:foregroundGravity="center"
+        app:layout_constraintBottom_toBottomOf="@id/eventPhotoContainer"
+        app:layout_constraintRight_toRightOf="@id/eventPhotoContainer"
+/>
 
     <Button
         android:id="@+id/create_button"
@@ -259,8 +263,8 @@
         android:fontFamily="@font/gilroy_bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/eventPhotoPickerButton"
         app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="30dp"
         />
 
     <TextView
@@ -277,13 +281,13 @@
         app:layout_constraintLeft_toLeftOf="@id/event_seats_label"
         />
 
-    <Button
+    <Spinner
         android:id="@+id/event_interests"
         android:layout_height="wrap_content"
         android:layout_width="140sp"
         android:hint="Interest..."
         style="?android:spinnerStyle"
         app:layout_constraintLeft_toLeftOf="@id/interests_label"
-        app:layout_constraintTop_toBottomOf="@id/interests_label"></Button>
+        app:layout_constraintTop_toBottomOf="@id/interests_label"></Spinner>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
