--- a/UniVerse/app/src/main/res/layout/event_card.xml
+++ b/UniVerse/app/src/main/res/layout/event_card.xml
@@ -97,15 +97,29 @@
             app:layout_constraintLeft_toRightOf="@+id/mapPin"/>
 
         <TextView
+            android:id="@+id/bullet"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="•"
+            android:textSize="30dp"
+            android:textAlignment="center"
+            android:layout_marginHorizontal="6dp"
+            android:fontFamily="@font/publicsans_regular"
+            app:layout_constraintTop_toTopOf="@+id/mapPin"
+            app:layout_constraintBottom_toBottomOf="@id/mapPin"
+            app:layout_constraintLeft_toRightOf="@+id/eventLocation"
+            app:layout_constraintRight_toLeftOf="@id/eventTime"/>
+
+        <TextView
             android:id="@+id/eventTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="-  3:00p-4:00p"
+            android:text="3:00p-4:00p"
             android:layout_marginLeft="6dp"
             android:fontFamily="@font/publicsans_regular"
             app:layout_constraintTop_toTopOf="@+id/mapPin"
             app:layout_constraintBottom_toBottomOf="@id/mapPin"
-            app:layout_constraintLeft_toRightOf="@+id/eventLocation"/>
+            app:layout_constraintLeft_toRightOf="@+id/bullet"/>
 
         <Button
             android:id="@+id/info_button"
