--- a/UniVerse/app/src/main/res/layout/activity_event_info.xml
+++ b/UniVerse/app/src/main/res/layout/activity_event_info.xml
@@ -14,20 +14,20 @@
         android:scaleType="center"
         android:layout_marginHorizontal="30dp"
         android:src="@drawable/ic_baseline_arrow_back_24"
-        app:layout_constraintBottom_toBottomOf="@id/createEvent_title"
+        app:layout_constraintBottom_toBottomOf="@id/eventInfo_header"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="@id/createEvent_title"
+        app:layout_constraintTop_toTopOf="@id/eventInfo_header"
         app:layout_constraintVertical_bias="0.63" />
 
     <!-- Event Name -->
     <TextView
-        android:id="@+id/createEvent_title"
+        android:id="@+id/eventInfo_header"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:layout_margin="20dp"
         android:layout_marginTop="32dp"
         android:fontFamily="@font/gilroy_bold"
-        android:text="Event Title"
+        android:text="Event Info"
         android:textColor="@color/black"
         android:textSize="40sp"
         android:textStyle="bold"
@@ -35,19 +35,46 @@
         app:layout_constraintLeft_toRightOf="@id/backEventInfo"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <!-- Event Name -->
+    <TextView
+        android:id="@+id/createEvent_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:fontFamily="@font/gilroy_bold"
+        android:text="Event Title"
+        android:textColor="@color/black"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        app:layout_constraintLeft_toLeftOf="@id/datetime_icon"
+        app:layout_constraintTop_toBottomOf="@id/eventPhoto" />
+
+    <!-- Organizer -->
+    <ImageView
+        android:id="@+id/organizer_icon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:src="@drawable/ic_heroicon_organizer"
+        app:layout_constraintLeft_toRightOf="@id/event_location_label"
+        app:layout_constraintRight_toLeftOf="@id/event_organizer_label"
+        app:layout_constraintBottom_toBottomOf="@id/event_location_label"
+        app:layout_constraintTop_toTopOf="@id/event_location_label" />
+
     <TextView
         android:id="@+id/event_organizer_label"
         android:layout_height="20dp"
         android:layout_width="120dp"
-        android:layout_marginLeft="60dp"
+        android:layout_marginLeft="10dp"
         android:background="@android:color/transparent"
-        android:text="Organizer Name"
+        android:text="Organizer"
+        android:textSize="16sp"
         android:fontFamily="@font/gilroy_bold"
         android:textColor="@color/colorPrimary"
         android:textStyle="bold"
         app:layout_constraintTop_toTopOf="@id/event_location_label"
         app:layout_constraintBottom_toBottomOf="@id/event_location_label"
-        app:layout_constraintLeft_toRightOf="@id/event_location_label"
+        app:layout_constraintLeft_toRightOf="@id/organizer_icon"
         />
 
 
@@ -64,23 +91,32 @@
         android:layout_marginRight="40dp"
         android:ems="7"
         app:layout_constraintTop_toBottomOf="@id/event_organizer_label"
-        app:layout_constraintLeft_toLeftOf="@id/event_organizer_label"/>
+        app:layout_constraintLeft_toLeftOf="@id/organizer_icon"/>
 
     <!-- Location Name-->
+    <ImageView
+        android:id="@+id/location_icon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_heroicon_location"
+        app:layout_constraintLeft_toLeftOf="@id/datetime_icon"
+        app:layout_constraintBottom_toBottomOf="@id/event_location_label"
+        app:layout_constraintTop_toTopOf="@id/event_location_label" />
 
     <TextView
         android:id="@+id/event_location_label"
         android:layout_width="120dp"
         android:layout_height="20dp"
-        android:layout_marginHorizontal="40dp"
+
         android:layout_marginTop="15dp"
         android:background="@android:color/transparent"
         android:fontFamily="@font/gilroy_bold"
-        android:text="Location"
+        android:text="Where"
+        android:textSize="16sp"
         android:textColor="@color/colorPrimary"
         android:textStyle="bold"
         app:layout_constraintHorizontal_bias="0.462"
-        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintLeft_toLeftOf="@id/event_datetime_label"
         app:layout_constraintTop_toBottomOf="@id/DateEvent" />
 
     <TextView
@@ -94,22 +130,71 @@
         android:textSize="14sp"
         android:ems="7"
         app:layout_constraintTop_toBottomOf="@id/event_location_label"
-        app:layout_constraintLeft_toLeftOf="@id/event_location_label"/>
+        app:layout_constraintLeft_toLeftOf="@id/location_icon"/>
+
+    <!-- Seats -->
+    <ImageView
+        android:id="@+id/seats_icon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_heroicon_ticket"
+        app:layout_constraintLeft_toLeftOf="@id/datetime_icon"
+        app:layout_constraintBottom_toBottomOf="@id/event_seats_label"
+        app:layout_constraintTop_toTopOf="@id/event_seats_label" />
 
     <TextView
-        android:id="@+id/event_description_label"
+        android:id="@+id/event_seats_label"
         android:layout_height="20dp"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_marginTop="15dp"
-        android:layout_marginHorizontal="40dp"
+        android:layout_marginHorizontal="10dp"
         android:background="@android:color/transparent"
-        android:text="Description"
+        android:text="Seats Left"
+        android:textSize="16sp"
         android:fontFamily="@font/gilroy_bold"
         android:textColor="@color/colorPrimary"
         android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@id/event_location"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toRightOf="@id/description_icon"
+        />
+
+    <TextView
+        android:id="@+id/event_seats"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/publicsans_regular"
+        android:text=""
+        android:textColor="@color/black"
+        android:maxLines="1"
+        android:textSize="14sp"
+        android:ems="7"
+        app:layout_constraintTop_toBottomOf="@id/event_seats_label"
+        app:layout_constraintLeft_toLeftOf="@id/seats_icon"/>
+
+    <!-- Description -->
+    <ImageView
+        android:id="@+id/description_icon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_heroicon_news"
+        app:layout_constraintLeft_toLeftOf="@id/datetime_icon"
+        app:layout_constraintBottom_toBottomOf="@id/event_description_label"
+        app:layout_constraintTop_toTopOf="@id/event_description_label" />
+
+    <TextView
+        android:id="@+id/event_description_label"
+        android:layout_height="20dp"
+        android:layout_width="120dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginHorizontal="10dp"
+        android:background="@android:color/transparent"
+        android:text="Description"
+        android:textSize="16sp"
+        android:fontFamily="@font/gilroy_bold"
+        android:textColor="@color/colorPrimary"
+        android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@id/event_seats"
+        app:layout_constraintLeft_toRightOf="@id/description_icon"
         />
 
     <TextView
@@ -125,21 +210,33 @@
         android:minLines="3"
         android:maxLines="3"
         app:layout_constraintTop_toBottomOf="@id/event_description_label"
-        app:layout_constraintLeft_toLeftOf="@id/event_description_label"/>
+        app:layout_constraintLeft_toLeftOf="@id/description_icon"/>
+
+    <ImageView
+        android:id="@+id/datetime_icon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_heroicon_clock"
+        android:layout_marginLeft="40dp"
+        app:layout_constraintRight_toLeftOf="@id/event_datetime_label"
+        app:layout_constraintBottom_toBottomOf="@id/event_datetime_label"
+        app:layout_constraintTop_toTopOf="@id/event_datetime_label"
+        app:layout_constraintLeft_toLeftOf="parent"/>
 
     <TextView
         android:id="@+id/event_datetime_label"
         android:layout_width="wrap_content"
         android:layout_height="20dp"
-        android:layout_marginHorizontal="40dp"
+        android:layout_marginHorizontal="10dp"
         android:layout_marginTop="15dp"
         android:background="@android:color/transparent"
         android:fontFamily="@font/gilroy_bold"
-        android:text="Date / Time"
+        android:text="When"
+        android:textSize="16sp"
         android:textColor="@color/colorPrimary"
         android:textStyle="bold"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/eventPhoto"/>
+        app:layout_constraintLeft_toRightOf="@id/datetime_icon"
+        app:layout_constraintTop_toBottomOf="@id/createEvent_title"/>
 
     <TextView
         android:id="@+id/DateEvent"
@@ -149,7 +246,7 @@
         android:textColor="@color/black"
         android:fontFamily="@font/publicsans_regular"
         app:layout_constraintTop_toBottomOf="@id/event_datetime_label"
-        app:layout_constraintLeft_toLeftOf="@id/event_datetime_label" />
+        app:layout_constraintLeft_toLeftOf="@id/datetime_icon" />
 
     <TextView
         android:id="@+id/TimeEvent"
@@ -172,7 +269,7 @@
         android:scaleType="centerCrop"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/createEvent_title"
+        app:layout_constraintTop_toBottomOf="@+id/eventInfo_header"
         app:shapeAppearanceOverlay="@style/eventImageView" />
 
 
@@ -186,8 +283,22 @@
         android:fontFamily="@font/gilroy_bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/edit_button"
         android:layout_marginBottom="30dp"
         />
+
+    <TextView
+        android:id="@+id/edit_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/colorPrimary"
+        android:textStyle="bold"
+        android:fontFamily="@font/gilroy_bold"
+        android:text="Edit Event"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="30dp"
+        android:visibility="gone"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
