--- a/UniVerse/app/src/main/res/layout/schedule_list_items.xml
+++ b/UniVerse/app/src/main/res/layout/schedule_list_items.xml
@@ -25,7 +25,8 @@
         android:fontFamily="@font/gilroy_bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
+        android:ellipsize="end"
+        android:maxLines="1"
         android:text="Event Name"
         android:textColor="@color/black"
         android:textSize="20sp"
