--- a/UniVerse/app/src/main/res/layout/fragment_feed.xml
+++ b/UniVerse/app/src/main/res/layout/fragment_feed.xml
@@ -31,4 +31,17 @@
         android:layout_marginBottom="20dp"
         android:layout_marginRight="20dp"/>
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/backToTop"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/recycleView"
+        android:src="@drawable/ic_baseline_keyboard_arrow_up_24"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="15dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:visibility="gone"
+        android:background="#6D353232"
+        android:backgroundTint="#6D353232" />
 </androidx.constraintlayout.widget.ConstraintLayout>
