--- a/UniVerse/app/src/main/res/layout/schedule_list_items.xml
+++ b/UniVerse/app/src/main/res/layout/schedule_list_items.xml
@@ -21,17 +21,21 @@
     <TextView
         app:layout_constraintTop_toTopOf="@id/eventTime"
         app:layout_constraintLeft_toRightOf="@id/eventTime"
+        app:layout_constraintRight_toLeftOf="@id/info_icon"
+        app:layout_constraintHorizontal_bias="0"
         android:id="@+id/eventName"
         android:fontFamily="@font/gilroy_bold"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:ellipsize="end"
         android:maxLines="1"
         android:text="Event Name"
+        android:textIsSelectable="false"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:layout_margin="20dp"/>
+        android:layout_marginTop="16dp"
+        android:layout_marginLeft="10dp"/>
 
     <TextView
         app:layout_constraintTop_toBottomOf="@id/eventName"
@@ -44,13 +48,15 @@
         android:textSize="16sp" />
 
     <ImageView
+        android:id="@+id/info_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_baseline_info_24"
-        app:tint="@color/accentColor300"
+        app:tint="@color/colorPrimary"
         app:layout_constraintTop_toTopOf="@id/eventTime"
         app:layout_constraintBottom_toBottomOf="@id/eventTime"
         app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginRight="16dp"
         />
 
     <TextView
