--- a/UniVerse/app/src/main/res/layout/activity_event_info.xml
+++ b/UniVerse/app/src/main/res/layout/activity_event_info.xml
@@ -7,25 +7,26 @@
     android:layout_height="match_parent"
     tools:context=".CreateEvent">
 
+    <!-- Event Name -->
+
     <ImageView
         android:id="@+id/backEventInfo"
         android:layout_width="40dp"
         android:layout_height="40dp"
+        android:layout_marginLeft="12dp"
         android:scaleType="center"
-        android:layout_marginHorizontal="30dp"
         android:src="@drawable/ic_baseline_arrow_back_24"
         app:layout_constraintBottom_toBottomOf="@id/eventInfo_header"
         app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/eventInfo_header"
         app:layout_constraintTop_toTopOf="@id/eventInfo_header"
-        app:layout_constraintVertical_bias="0.63" />
+/>
 
-    <!-- Event Name -->
     <TextView
         android:id="@+id/eventInfo_header"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:layout_margin="20dp"
-        android:layout_marginTop="32dp"
         android:fontFamily="@font/gilroy_bold"
         android:text="Event Info"
         android:textColor="@color/black"
