--- a/UniVerse/app/src/main/res/layout/fragment_feed.xml
+++ b/UniVerse/app/src/main/res/layout/fragment_feed.xml
@@ -8,6 +8,7 @@
     android:animateLayoutChanges="true">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:background="@color/colorLightGray"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
