--- a/UniVerse/app/src/main/res/values/colors.xml
+++ b/UniVerse/app/src/main/res/values/colors.xml
@@ -10,11 +10,12 @@
 
     <!-- Background -->
     <color name="colorBackground">#E5E5E5</color>
+    <color name="colorLightGray">#FAFAFA</color>
 
     <!-- Primary Color -->
     <color name="colorPrimary">#0D88F2</color>
-    <color name="colorPrimaryLight">#83B9E8</color>
-    <color name="colorPrimaryVariant">#046DC8</color>
+    <color name="colorPrimaryLight">#68b7ff</color>
+    <color name="colorPrimaryVariant">#005cbf</color>
     <color name="colorOnPrimary">#FAFAF9</color>
 
     <!-- Secondary brand color. -->
