--- a/UniVerse/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/UniVerse/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -1,30 +1,32 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
     android:viewportWidth="108"
     android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+    <group android:scaleX="0.58756286"
+        android:scaleY="0.58756286"
+        android:translateX="11.34"
+        android:translateY="11.34">
+        <path
+            android:pathData="M0,0h145.21v145.21h-145.21z"
+            android:fillColor="#f4f0e4"/>
+        <path
+            android:pathData="M42.39,40.21c0,-2 3,-2.58 3,-2.58L60.91,32s10.55,-3.87 11.5,-3.87c3,0 27.48,9.51 27.48,9.51s2.93,0.74 2.93,2.55A2.33,2.33 0,0 1,101 42.54S75.91,52.37 72.6,52.37c-1.72,0 -9.35,-2.82 -16.6,-5.51C49,44.27 42.39,42.71 42.39,40.21Z"
+            android:fillColor="#0d88f2"/>
+        <path
+            android:pathData="M48.5,52.37m-3.16,0a3.16,3.16 0,1 1,6.32 0a3.16,3.16 0,1 1,-6.32 0"
+            android:fillColor="#0d88f2"/>
+        <path
+            android:pathData="M50,44.14a12.25,12.25 0,0 0,-2.58 5.46c-0.44,3 2.7,0.89 2.7,0.89a12,12 0,0 1,3.61 -6.23C56.84,41.34 50,44.14 50,44.14Z"
+            android:fillColor="#0d88f2"/>
+        <path
+            android:pathData="M46.58,54.46l-2.3,14.35a1.2,1.2 0,0 0,1.3 1.64h5.86s1.59,-0.12 1.28,-2L50.31,54.09Z"
+            android:fillColor="#0d88f2"/>
+        <path
+            android:pathData="M55.93,50 L54.55,63.74s0.72,3.79 7,5.33a44,44 0,0 0,18.84 0.74c6.21,-1.18 10,-3.46 10.3,-5.92C90.77,63.52 89.4,50 89.4,50S75,55.54 73.25,55.54C70.53,55.54 55.93,50 55.93,50Z"
+            android:fillColor="#0d88f2"/>
+        <path
+            android:fillColor="#FF000000"
+            android:pathData="M56.63,102.48V74.22h8.22v27.6c0,4.08 2.16,7.14 7.8,7.14s7.8,-3.06 7.8,-7.14V74.22h8.28v28.26c0,9.06 -6.84,14.58 -16.08,14.58S56.63,111.54 56.63,102.48Z"/>
+    </group>
 </vector>
